Update 'qgdf3g417-dotnet-basic' component image to: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:5d7a84dec1fd59315e6bbb1310f9e8538cd2336f@sha256:d8155e44d495942199b60c2641721e3356edbfeb51871d0c4d360c829214b5f2

--- a/components/qgdf3g417-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/qgdf3g417-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: qgdf3g417-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:5d7a84dec1fd59315e6bbb1310f9e8538cd2336f@sha256:d8155e44d495942199b60c2641721e3356edbfeb51871d0c4d360c829214b5f2
+          name: container-image
